hphp/test/slow/record/record-alias-param-error.php.expectf
Catchable fatal error: Argument 1 passed to myfunc() must be an instance of Baz, Foo given in %s/record-alias-param-error.php on line 20
